<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <TextView
        android:id="@+id/title_monopoly_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monopoly"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_monopoly_main">

        <EditText
            android:id="@+id/code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Code"
            android:hint="@string/code_de_partie"
            android:inputType="text" />
        <Button
            android:id="@+id/button_join_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rejoindre_une_partie" />

        <Button
            android:id="@+id/button_create_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creer_une_partie" />

    </LinearLayout>

    <EditText
        android:id="@+id/pseudo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Pseudo"
        android:hint="@string/pseudo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:inputType="text" />

    <FrameLayout
        android:id="@+id/frame_layout_popup_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>